# outdaxius

./: .gitignore  README.md  backend_callgraph.dot  render.yaml  schema.sql  vercel.json
backend/: .env.example  .gitignore  COMPANY_SYSTEM.md  README.md  alembic.ini  outdaxius-schema.sql  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0000_baseline.py  0001_mvp_foundation.py  0002_payments_provider.py  0003_reuse_flag.py  0004_nullable_legal.py  0005_team_is_active.py
backend/app/: main.py  utils.py
backend/app/api/: __init__.py  activities.py  activity_schedules.py  assignments.py  auth.py  booking.py  company.py  company_payments.py  companymember.py  deps.py  locations.py  membership_requests.py  payment_stripe.py  payments_flow.py  program_schedules.py  programs.py  roles.py  teams.py  types.py  users.py
backend/app/core/: crypto.py  permissions.py  security.py
backend/app/db/: config.py  session.py
backend/app/models/: __init__.py  activity.py  activity_schedule.py  assignment.py  booking.py  company.py  company_payment_account.py  companymember.py  invitation.py  location.py  membership_request.py  payment.py  program_schedule.py  programactivity.py  programs.py  team.py  types.py  user.py
backend/app/schemas/: activity.py  activity_schedule.py  assignment.py  booking.py  company.py  company_limits.py  companymember.py  invitation.py  location.py  membership_request.py  types.py  (+4 more)
backend/scripts/: backend.txt  collect_py.py  create_super_admin.py  dev.ps1
backend/tests/: test_companies.py
(+103 files in other folders)
