[project]
name = "outdaxius-backend"
version = "0.1.0"
description = "FastAPI backend for Outdaxius"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "alembic>=1.13"
]

[tool.uvicorn]
factory = false
